/*
 * Copyright (C) 2023 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.google.cloud.teleport.v2.proto.testing;

option java_multiple_files = true;
option java_package = "com.google.cloud.teleport.v2.proto.testing";

enum Tier {
  UNKNOWN_TIER = 0;
  FREE_TIER = 1;
  PAYING_TIER = 2;
  PREMIUM_TIER = 3;
}

message User {
  string name = 1;
  Tier tier = 2;
  oneof contact {
    string email = 3;
    string phone_number = 4;
  }
  Address address = 5;
}

message Address {
  string street = 1;
  uint32 apartment_number = 2;
  string city = 3;
  string state = 4;
  uint32 zip_code = 5;
}
